college data fetching properly in frontend